<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".assignment1.Assignment1Q2">

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/button1"
        android:layout_marginStart="10dp"
        android:text="@string/button_2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/button1"
        android:layout_below="@id/button1"
        android:layout_marginStart="10dp"
        android:text="@string/button_3" />

    <TextView
        android:id="@+id/userText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:layout_below="@id/button1"
        android:layout_marginTop="100dp"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/inputField"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:layout_toEndOf="@id/userText"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputField"
        android:layout_toEndOf="@id/userText"
        android:text="@string/button_4" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputField"
        android:layout_toEndOf="@id/button5"
        android:text="@string/submit" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button4"
        android:layout_toEndOf="@id/button4"
        android:text="@string/button_5" />

</RelativeLayout>