<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".assignment1.Assignment1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20sp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="124dp"
            android:layout_height="128dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/img_1" />

        <TextView
            android:id="@+id/textView6"
            android:textSize="30sp"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assignment_1" />

        <Button
            android:id="@+id/openQ1Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:onClick="openQuestion1"
            android:text="@string/open_question_1" />

        <Button
            android:id="@+id/openQ2Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="openQuestion2"
            android:text="@string/open_question_2" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>